# shakudo-examples

./: .gitignore  README.md  first-script.sh  flask_app.py
backend-dify-opensource/: Dockerfile  README.md  app_dify.py  helloSQL.yml  main.py  minio_download.py  requirements.txt  run.sh  run_local.sh
dify-echo/: app.py  requirements.txt
dify-rag-tutorial/: app.py  constants.py  requirements.txt  run.sh
dify-weather/: README.md  app.py  run.sh
example-aider-apps/: flask_app.py  run_flask.sh
example-batch-job/: README.md  cross-check.py  example-job.py  requirement.txt  run.sh  search-minio.py  send-batch.py
example-image/: Dockerfile
example-image-nested/: requirements.txt
example-job/: README.md  example-graphql-mutation.graphql  example-job.py  example-job.yaml
flask-micro-svc/: app.py  run.sh
graph-rag/: app.py  common.py  dify-graphrag-workflow.yml  ingest.py  ingest.sh  ocr_preprocess.py  prompts.py  requirements.txt  run.sh  test_ingestion.py  tool_configuration.py
graph-rag-financial10k/: dify-tool.yaml  ocr_preprocess.py  prompts.py
helm-app/: Dockerfile  app.py  (+1 more)
web-search-agent-flow/: agent-graph.json  hello.py  main.py  pyproject.toml  requirements.txt  run.sh  uvicorn_log_config.json
web-search-agent-flow/api/: __init__.py  debug.py  health.py  job.py  realtime.py  steps.py
web-search-agent-flow/modules/: __init__.py  agents.py  fastapi_mcp_integration.py  mcp_tool_extractor.py  memory.py  models.py  telemetry.py  tools.py  utils.py
web-search-agent-flow/modules/common/: __init__.py  custom_mcp_adapter.py  models.py
(+126 files in other folders)
